# hft-backtest-engine

./: .clang-tidy  .gitignore  CMakeLists.txt  Makefile  README.md
include/backtest/: csv_data_loader.hpp  execution_engine.hpp  market_event.hpp  order.hpp  pnl_calculator.hpp  replay_engine.hpp  report_generator.hpp  ring_buffer.hpp  test_strategy.hpp  trade_record.hpp
output/: summary.txt
src/: csv_data_loader.cpp  main.cpp
tests/: CMakeLists.txt  test_execution.cpp  test_ofi.cpp  test_replay.cpp
